--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,11 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>ru.t1.java.demo</groupId>
-            <artifactId>track-starter</artifactId>
-            <version>0.0.22</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>ru.t1.java.demo</groupId>-->
+<!--            <artifactId>track-starter</artifactId>-->
+<!--            <version>0.0.22</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
